--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -4,8 +4,8 @@
 * 샘플코드_01
 ```
 ```
-### 실습제목입력
-* 피보나치 수열 코드
+### 피보나치 수열로 함수 이해
+* 샘플코드_02-1
 ```
 def fib(n): 
      a, b = 0, 1
@@ -14,6 +14,19 @@ def fib(n):
          a, b = b, a+b
      print()
 fib(2000)
+```
+* 샘플코드_02-2
+```
+def fib2(n): 
+    result = []
+    a, b = 0, 1
+    while a < n:
+        result.append(a)
+        a, b = b, a+b
+    return result
+
+f100 = fib2(100)    # call it
+print(f100) 
 ```
 
 ### 실습제목입력
