--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -1,7 +1,26 @@
 # 함수의 적용 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
-* 샘플코드_01
+### 함수의 기본 개념 소개
+* 샘플코드_01-1
+```
+def say_hello():
+    print('Hello world!')
+
+say_hello()
+```
+* 샘플코드_01-1
+```
+from microbit import*
+
+def greet_user(name):
+    display.scroll('Hello, {0}!'.format(name))
+
+greet_user('Learnmore')
+```
+* 샘플코드_01-2
+```
+```
+* 샘플코드_01-3
 ```
 ```
 ### 피보나치 수열로 함수 이해
