--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -8,7 +8,7 @@ def say_hello():
 
 say_hello()
 ```
-* 샘플코드_01-1
+* 샘플코드_01-2
 ```
 from microbit import*
 
@@ -17,11 +17,23 @@ def greet_user(name):
 
 greet_user('Learnmore')
 ```
-* 샘플코드_01-2
-```
-```
 * 샘플코드_01-3
 ```
+from microbit import*
+
+def add_text(a, b):
+    return a + ' ' +b
+
+result = add_text('Hello', 'Learnmore!')
+display.scroll('{0}'.format(result))
+```
+* 샘플코드_01-4
+```
+def add_numbers(a, b):
+    return a + b
+
+result = add_numbers(5, 3)
+print('결과: {}'.format(result))
 ```
 ### 피보나치 수열로 함수 이해
 * 샘플코드_02-1
