--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -29,21 +29,27 @@ display.scroll('{0}'.format(result))
 ```
 * 샘플코드_01-4
 ```
+from microbit import*
+
 def add_numbers(a, b):
     return a + b
 
 result = add_numbers(5, 3)
-print('결과: {}'.format(result))
+print('result: {}'.format(result))
+display.scroll('{}'.format(str(result)))
 ```
 ### 피보나치 수열로 함수 이해
 * 샘플코드_02-1
 ```
+from microbit import*
+
 def fib(n): 
      a, b = 0, 1
      while a < n:
          print(a, end=' ')
+         display.scroll(str(a), delay=40)
          a, b = b, a+b
-     print()
+     print()     
 fib(2000)
 ```
 * 샘플코드_02-2
