--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -66,9 +66,51 @@ f100 = fib2(100)    # call it
 print(f100) 
 ```
 
-### 실습제목입력
+### 함수로 마이크로 비트 센서 제어하기
 * 샘플코드_03
+  - 온도, 조도, 가속도, 사운드 센서를 함수로 구분하여 제어해본다.
 ```
+from microbit import *
+
+# 온도값을 반환하는 함수
+def read_temperature():
+    temp = temperature()
+    print('현재 온도: {}°C'.format(temp))
+
+# 가속도값을 반환하는 함수
+def read_acceleration():
+    accel_x, accel_y, accel_z = accelerometer.get_x(), accelerometer.get_y(), accelerometer.get_z()
+    print('가속도 X: {}, Y: {}, Z: {}'.format(accel_x, accel_y, accel_z))
+
+# 조도값을 반환하는 함수
+def read_light_level():
+    light = display.read_light_level()
+    print('현재 조도: {}'.format(light))
+
+# 마이크 인풋값을 반환하는 함수 (마이크로 비트 V2에서 지원)
+def read_microphone_level():
+    mic_level = microphone.sound_level()
+    print('마이크 인풋 레벨: {}'.format(mic_level))
+
+# 사용자 입력에 따라 해당 함수를 실행하는 메인 함수
+def main():
+    while True:
+        print('1: 온도, 2: 가속도, 3: 조도, 4: 마이크')
+        choice = input('입력하세요 (1/2/3/4): ')
+        
+        if choice == '1':
+            read_temperature()
+        elif choice == '2':
+            read_acceleration()
+        elif choice == '3':
+            read_light_level()
+        elif choice == '4':
+            read_microphone_level()
+        else:
+            print('잘못된 입력입니다. 1, 2, 3, 4 중 하나를 입력하세요.')
+
+# 프로그램 실행
+main()
 ```
 
 ## 이해하기 샘플코드
