--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -115,7 +115,89 @@ main()
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 함수활용 계산기 만들기
 ```
+from microbit import *
+
+# 덧셈 함수
+def add(a, b):
+    return a + b
+
+# 뺄셈 함수
+def subtract(a, b):
+    return a - b
+
+# 곱셈 함수
+def multiply(a, b):
+    return a * b
+
+# 나눗셈 함수
+def divide(a, b):
+    return a / b
+
+# 나눗셈 몫 함수
+def division_quotient(a, b):
+    return a // b
+
+# 나머지 함수
+def division_remainder(a, b):
+    return a % b
+
+# 거듭제곱 함수
+def power(a, b):
+    return a ** b
+
+
+# 연산 선택 및 실행 함수
+def calculate(operation, a, b):
+    if operation == '1':
+        result = add(a, b)
+    elif operation == '2':
+        result = subtract(a, b)
+    elif operation == '3':
+        result = multiply(a, b)
+    elif operation == '4':
+        result = divide(a, b)
+    elif operation == '5':
+        result = division_quotient(a, b)
+    elif operation == '6':
+        result = division_remainder(a, b)
+    elif operation == '7':
+        result = power(a, b)
+    else:
+        print('잘못된 입력')
+        return
+    display.scroll(str(result), delay=30)
+
+# 메인 함수
+def main():
+    # 여기서는 예시로 a와 b에 고정값을 할당합니다. 실제로는 사용자 입력을 받아 값을 할당할 수 있습니다.
+    a = input('a값 입력:')
+    b = input('b값 입력:')
+    print('1:덧셈 2:뺄셈 3:곱셈 4:나눗셈 5:몫 6:나머지 7:거듭 제곱')
+    while True:
+        # 사용자 입력 대신 버튼 A와 B의 조합으로 연산자를 선택하는 예시입니다.
+        if button_a.was_pressed():
+            operation = '1'  # 예시: a버튼 누르면 덧셈
+        elif button_b.was_pressed():
+            operation = '2'  # 예시: b버튼 누르면 뺄셈
+        elif button_a.was_pressed() and button_b.was_pressed():
+            operation = '3'  # 예시: a와 b 동시에 누르면 곱셈
+        elif pin_logo.is_touched():
+            operation = '4'  # 예시: 나눗셈
+        elif pin0.is_touched():
+            operation = '5'  # 예시: 나눗셈의 몫
+        elif pin1.is_touched():
+            operation = '6'  # 예시: 나눗셈의 나머비
+        elif pin2.is_touched():
+            operation = '7'  # 예시: 거듭제곱
+        else:
+            continue
+
+        calculate(operation, a, b)
+        sleep(1000)  # 결과를 충분히 본 후 다음 입력을 받기 위해 잠시 대기
+
+main()
 ```
 
 * 샘플코드_02
