--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -118,6 +118,9 @@ main()
   - 함수활용 계산기 만들기
 ```
 from microbit import *
+pin0.set_touch_mode(pin0.CAPACITIVE)
+pin1.set_touch_mode(pin1.CAPACITIVE)
+pin2.set_touch_mode(pin2.CAPACITIVE)
 
 # 덧셈 함수
 def add(a, b):
@@ -167,13 +170,13 @@ def calculate(operation, a, b):
     else:
         print('잘못된 입력')
         return
-    display.scroll(str(result), delay=30)
+    display.scroll(str(result), delay=50)
 
 # 메인 함수
 def main():
     # 여기서는 예시로 a와 b에 고정값을 할당합니다. 실제로는 사용자 입력을 받아 값을 할당할 수 있습니다.
-    a = input('a값 입력:')
-    b = input('b값 입력:')
+    a = int(input('a값 입력:'))
+    b = int(input('b값 입력:'))
     print('1:덧셈 2:뺄셈 3:곱셈 4:나눗셈 5:몫 6:나머지 7:거듭 제곱')
     while True:
         # 사용자 입력 대신 버튼 A와 B의 조합으로 연산자를 선택하는 예시입니다.
