--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -205,6 +205,39 @@ main()
 
 * 샘플코드_02
 ```
+#0~n의 범위까지 피보나치 수열의 개수를 맞히는 장치
+
+from microbit import*
+import music
+
+def fib(n): 
+    #n 미만의 모든 피보나치 수를 리스트로 반환
+    result = []
+    a, b = 0, 1
+    while a < n:
+        result.append(a)
+        a, b = b, a+b
+    return result
+
+def count_fibonacci_numbers(n):
+    #n값 안에 있는 피보나치 수의 개수를 확인
+    fib_sequence = fib(n)  # 피보나치 수열 생성
+    count = len(fib_sequence)  # 생성된 피보나치 수열의 길이(개수)를 계산
+    return count
+
+# 예시: 100 미만의 피보나치 수열 개수 확인
+n = int(input('0~n까지의 피보나치 수의 개수를 구하기 위한 n값을 입력:'))
+correct_answer= int(input('정답을 입력해주세요:'))
+fib_count = count_fibonacci_numbers(n)
+
+if correct_answer == fib_count:
+    music.play(music.POWER_UP)
+    display.scroll('Correct!', delay=40)
+    print('정답입니다. {} 미만의 피보나치 수열에 포함된 수의 개수: {}'.format(n, fib_count))
+else:
+    music.play(music.POWER_DOWN)
+    display.scroll('Wrong!', delay=40)
+    print('오답입니다. {} 미만의 피보나치 수열에 포함된 수의 개수: {}'.format(n, fib_count))
 ```
 
 * 샘플코드_03
