--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -204,6 +204,7 @@ main()
 ```
 
 * 샘플코드_02
+  - 피보나치 수열 개수 문제 출력 및 확인 장치
 ```
 #0~n의 범위까지 피보나치 수열의 개수를 맞히는 장치
 
@@ -241,6 +242,7 @@ else:
 ```
 
 * 샘플코드_03
+  -마이크로 비트 뮤직 박스
 ```
 ```
 
