Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -259,3 +259,7 @@ for i in range(1,11):
         
         sleep(100)  # 다음 애니메이션을 시작하기 전에 잠시 대기합니다.
 ```
+* 샘플코드_11: 마이크로 비트 초음파 모기 퇴치기
+```
+#12000Hz~17000Hz는 일반적으로 모기 및 벌레가 싫어하는 주파수 대역이다. music.pitch()함수로 주파수 대역을 설정하여 벌레 퇴치기를 만들어 본다.
+```
