Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -262,4 +262,29 @@ for i in range(1,11):
 * 샘플코드_11: 마이크로 비트 초음파 모기 퇴치기
 ```
 #12000Hz~17000Hz는 일반적으로 모기 및 벌레가 싫어하는 주파수 대역이다. music.pitch()함수로 주파수 대역을 설정하여 벌레 퇴치기를 만들어 본다.
+from microbit import *
+import music
+
+# 사운드 이펙트 생성 함수
+def play_sound_effect(frequency, duration):
+    music.pitch(frequency, duration)
+
+# 주파수 증가 및 감소를 위한 메인 코드
+def sweep_frequency():
+    # 주파수를 12000Hz에서 17000Hz까지 100Hz씩 증가
+    for freq in range(12000, 17001, 100):
+        play_sound_effect(freq, 100)  # 각 주파수를 100ms 동안 재생
+    
+    # 주파수를 17000Hz에서 12000Hz까지 100Hz씩 감소
+    for freq in range(17000, 11999, -100):
+        play_sound_effect(freq, 100)  # 각 주파수를 100ms 동안 재생
+
+# 메인 코드 실행
+while True:
+    if button_a.was_pressed():
+        while True:
+            sweep_frequency()
+    
+            if button_b.was_pressed():
+                break
 ```
