Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -43,12 +43,11 @@ while True:
     if running:
         current_time = time.ticks_diff(time.ticks_ms(), start_time)  # 경과 시간 계산
         seconds = current_time // 1000  # 밀리초를 초로 변환
-        display.show(str(seconds))
+        display.scroll(str(seconds), delay=50, wait=False)
         sleep(1000)
 
     if not running:
         display.clear()
-
 ```
 
 
