--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -244,6 +244,32 @@ else:
 * 샘플코드_03
   - 마이크로 비트 뮤직 박스
 ```
+from microbit import *
+import music
+
+# "반짝 반짝 작은별" 멜로디 재생 함수
+def twinkle_twinkle():
+    melody = [
+        'C4:4', 'C4:4', 'G4:4', 'G4:4', 'A4:4', 'A4:4', 'G4:8',
+        'F4:4', 'F4:4', 'E4:4', 'E4:4', 'D4:4', 'D4:4', 'C4:8',
+        'G4:4', 'G4:4', 'F4:4', 'F4:4', 'E4:4', 'E4:4', 'D4:8',
+        'G4:4', 'G4:4', 'F4:4', 'F4:4', 'E4:4', 'E4:4', 'D4:8',
+        'C4:4', 'C4:4', 'G4:4', 'G4:4', 'A4:4', 'A4:4', 'G4:8',
+        'F4:4', 'F4:4', 'E4:4', 'E4:4', 'D4:4', 'D4:4', 'C4:8'
+    ]
+    music.play(melody)
+def baby_shark():
+    melody = [
+        'D4:4', 'E4:2', 
+        'G4:2', 'G4:2', 'G4:2', 'G4:1', 'G4:2', 'G4:1', 'G4:2', 'D4:2', 'E4:2',
+        'G4:4', 'G4:2', 'G4:1', 'G4:1', 'G4:2', 'G4:2', 'D4:2', 'E4:2',
+        'G4:4', 'G4:2', 'G4:1', 'G4:1', 'G4:2', 'G4:2', 'G4:2', 'G4:2',
+        'F#4:2', 'F#4:2', ' :4', 'D4:4', 'E4:4', 
+    ]
+
+    music.play(melody)
+# 메인 코드
+baby_shark()
 ```
 
 ## 적용하기 샘플코드
