--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -258,6 +258,7 @@ def twinkle_twinkle():
         'F4:4', 'F4:4', 'E4:4', 'E4:4', 'D4:4', 'D4:4', 'C4:8'
     ]
     music.play(melody)
+
 def baby_shark():
     melody = [
         'D4:4', 'E4:2', 
@@ -267,9 +268,37 @@ def baby_shark():
         'F#4:2', 'F#4:2', ' :4', 'D4:4', 'E4:4', 
     ]
 
+def do_re_mi_song():
+    melody = [
+        'c3:6', 'd3:2', 'e3:6', 'c3:2', 'e3:4', 'c3:4', 'e3:4', ' :4',
+        'd3:6', 'e3:2', 'f3:2', 'f3:2', 'e3:2', 'd3:2', 'f3:10', ' :4',
+        'e3:6', 'f3:2', 'g3:6', 'e3:2', 'g3:4', 'e3:4', 'g3:4', ' :4',
+        'f3:6', 'g3:2', 'a3:2', 'a3:2', 'g3:2', 'f3:2', 'a3:10', ' :4', 
+        'g3:6', 'c3:2', 'd3:2', 'e3:2', 'f3:2', 'g3:2', 'a3:10',' :4',
+        'a3:6', 'd3:2', 'e3:2', 'f#3:2', 'g3:2', 'a3:2', 'b3:10',' :4',
+        'b3:6', 'e3:2', 'f#3:2', 'g#3:2', 'a3:2', 'b3:2', 'c4:10',' :4',
+        'b3:2', 'bb3:2', 'a3:4', 'f3:4', 'b3:4', 'g3:4', 'c4:10',' :4'
+       
+        
+        
+    ]
     music.play(melody)
 # 메인 코드
-baby_shark()
+while True:
+    print('----------Music Box---------')
+    print('뮤직박스! 노래를 선택해주세요.')
+    print('1번은 작은별\n2번은 아기상어\n3번은 도레미송') #\n은 문자열 이스케이프 명령 중 줄바꿈 기능
+    print('----------------------------')
+    melody_box = int(input('노래 선택:'))
+    if melody_box == 1:
+        twinkle_twinkle()
+    elif melody_box == 2:
+        baby_shark()
+    elif melody_box == 3:
+        do_re_mi_song()
+    else:
+        print('번호를 다시 선택해주세요' )
+        continue
 ```
 
 ## 적용하기 샘플코드
