--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -56,7 +56,32 @@ while True:
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - '상속'을 사용하는 확장된 클래스
 ```
+from microbit import *
+
+class LED:
+    def __init__(self, interval):
+        self.interval = interval
+
+    def blink(self):
+        display.show(Image.HEART)
+        sleep(self.interval)
+        display.clear()
+        sleep(self.interval)
+
+class FancyLED(LED): # LED 클래스 상속
+    def fancy_blink(self):
+        for _ in range(2):
+            self.blink()
+        sleep(1000)
+        for _ in range(3):
+            self.blink()
+
+# 클래스 사용
+fancy_led = FancyLED(200) # 200ms 간격으로 점멸
+while True:
+    fancy_led.fancy_blink()
 ```
 
 * 샘플코드_02
