--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -44,9 +44,60 @@ led = LED(500) # 500ms 간격으로 점멸
 while True:
     led.blink()
 ```
-### 실습제목입력
-* 샘플코드_02
+### 모듈 이해 및 실습
+* 샘플코드_02-base_display.py 파일
 ```
+# base_features.py 파일은 부모 클래스 파일(모듈)
+from microbit import display, Image
+
+class DisplayObject:
+    def show(self):
+        """디스플레이 객체가 출력될 때 기본 동작을 정의합니다."""
+        display.show(Image.HAPPY)
+
+class ButtonHandler:
+    def __init__(self, button):
+        self.button = button
+
+    def is_pressed(self):
+        """버튼이 눌렸는지 확인하는 메소드입니다."""
+        return self.button.is_pressed()
+```
+* 샘플코드_02-custom_display.py 파일
+```
+# advanced_features.py 파일은 자식 클래스 파일(모듈)
+from microbit import button_a, button_b, display, Image
+from base_features import DisplayObject, ButtonHandler
+
+class InteractiveDisplay(DisplayObject):
+    def show(self):
+        """상속을 통해 DisplayObject의 show 메소드를 오버라이드합니다."""
+        display.show(Image.CONFUSED)
+
+class ButtonAHandler(ButtonHandler):
+    def __init__(self):
+        super().__init__(button_a)
+
+class ButtonBHandler(ButtonHandler):
+    def __init__(self):
+        super().__init__(button_b)
+```
+* 샘플코드_02-main.py 파일
+```
+# main.py 파일은 상속된 클래스를 사용하는 파일
+from custom_display import CustomDisplay
+from microbit import sleep
+
+# CustomDisplay 클래스의 인스턴스 생성
+custom_display = CustomDisplay()
+
+# 상속받은 메소드 호출
+custom_display.show_image()  # BaseDisplay에서 상속받은 메소드
+sleep(2000)
+
+# 확장된 클래스에서 정의된 새로운 메소드 호출
+custom_display.show_custom_image()
+sleep(2000)
 ```
 
 ### 실습제목입력
