--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -303,9 +303,10 @@ while True:
 
 ## 적용하기 샘플코드
 * 샘플코드_01
+  - #GPT에게 프롬프트 엔지니어링 및 리버스 프롬프트 엔지니어링 관점으로, 마이크로 비트를 파이썬으로 다룰 수 있는 명령 예시 10가지를 출력받아 보기
   - GPT프롬프트 템플릿
     ```
-  
+    
     ```
   - GPT 프롬프트 템플릿 입력 내용
     ```
