--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -199,7 +199,7 @@ print(list)
 
 ## 적용하기 샘플코드
 * 샘플코드_01
-  - GPT 프롬프트 명령을 템플릿을 사용하지 않고 대화를 활용하여 코드를 설계하는 방법
+  - GPT 프롬프트 템플릿을 사용하지 않고 대화를 활용하여 코드를 설계하는 방법
     ```
     1번 명령) 사용할 샘플 코드를 GPT 대화 창에 복사한다.(복사를 하면 GPT가 주석을 달거나, 알고리즙을 설명해준다. 설명 된 상타에서 부족한 부분이 있으면 다음 명령 대화에서 제시해준다.) 
     2번 명령) 위 코드는 OOO언어로 설계된 알고리즘 입니다. OOO을 제어하기 위한 코드입니다.   
