--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -304,17 +304,58 @@ while True:
 ## 적용하기 샘플코드
 * 샘플코드_01
   - GPT에게 프롬프트 엔지니어링 및 리버스 프롬프트 엔지니어링 관점으로, 마이크로 비트를 파이썬으로 다룰 수 있는 프롬프트 예시 10가지를 출력받아 보기
-  - GPT프롬프트 템플릿
+    ```
+    1번 명령) 마이크로 비트(macrobit)를 알고 있나요?
+    2번 명령) 파이썬(python)을 알고 있나요?
+    3번 명령) 마이크로 비트 v2.21을 파이썬으로 컨트롤 하는 방법을 알고 있나요?
+    4번 명령) 마이크로 비트 v2.21을 파이썬으로 컨트롤 하기 위한 GPT에게 할 수 있는 명령(프롬프트) 샘플을 10가지 제공해주세요.
+    5번 명령) 파이썬 문법 중 '함수(definition)'을 마이크로 비트로 이해하기 위한 '명령(프롬프트)' 샘플 2가지만 제공해주세요.
+    ```
+
+  - GPT생성 명령(프롬프트) 샘플 10 가지 예시
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
     ```
     
     ```
-  - GPT 프롬프트 템플릿 입력 내용
+    - 버튼 입력에 따른 조건적 반응 명령(프롬프트)
     ```
-   
+    
     ```
-  - GPT생성 코드
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
     ```
-   
+    
+    ```
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    ```
+    
+    ```
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    ```
+    
+    ```
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    ```
+    
+    ```
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    ```
+    
+    ```
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    ```
+    
+    ```
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    ```
+    
+    ```
+    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    ```
+    
+    ```
+  - GPT생성 명령(프롬프트) 함수 이해 샘플 예시
+    ```
+    
     ```
 
 *샘플코드_01
