--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -315,50 +315,78 @@ while True:
   - GPT생성 명령(프롬프트) 샘플 10 가지 예시
     - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
     ```
-    
+    마이크로 비트 v2.21에서 'Welcome' 문자열을 스크롤하는 파이썬 코드를 작성해주세요.
     ```
     - 버튼 입력에 따른 조건적 반응 명령(프롬프트)
     ```
-    
+    마이크로 비트 v2.21에서 버튼 A와 B를 동시에 누를 때 'AB Pressed' 메시지를 디스플레이하는 파이썬 코드를 생성해주세요."
+    ```
+    - 온도 센서 값에 따른 표시 명령(프롬프트)
+    ```
+    마이크로 비트 v2.21의 온도 센서 값을 읽고, 현재 온도를 LED 디스플레이에 표시하는 파이썬 코드를 요청합니다.
+    ```
+    - 가속도계를 사용한 흔들림 감지 명령(프롬프트)
+    ```
+    마이크로 비트 v2.21를 흔들었을 때 'Shake detected' 메시지를 디스플레이하는 파이썬 코드를 작성해주세요.
+    ```
+    - 나침반 센서를 이용한 방향 표시 명령(프롬프트)
+    ```
+    마이크로 비트 v2.21의 나침반 센서를 사용하여 현재 방향(북, 남, 동, 서)을 LED에 표시하는 파이썬 코드를 제공해주세요.
+    ```
+    - 라디오 통신을 이용한 메시지 전송 명령(프롬프트)
+    ```
+    마이크로 비트 v2.21을 사용해 'Hello' 메시지를 다른 마이크로 비트로 라디오 통신을 통해 전송하는 파이썬 코드를 요청합니다.
+    ```
+    - 사용자 정의 이미지 표시 명령(프롬프트)
+    ```
+    마이크로 비트 v2.21의 LED 디스플레이에 사용자 정의 이미지(예: 웃는 얼굴)를 표시하는 파이썬 코드를 작성해주세요.
     ```
     - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
     ```
-    
+    마이크로 비트 v2.21에서 내장 스피커를 사용해 간단한 멜로디를 재생하는 파이썬 코드를 생성해주세요.
     ```
-    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    - 광센서 값을 이용한 밝기 조절 명령(프롬프트)
     ```
-    
+    마이크로 비트 v2.21의 내장 광센서 값을 읽어 LED 디스플레이의 밝기를 자동으로 조절하는 파이썬 코드를 작성해주세요.
     ```
-    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+    - 루프를 사용한 반복 메시지 디스플레이 표시 명령(프롬프트)
     ```
-    
+    마이크로 비트 v2.21에서 'Python' 메시지를 5회 반복해서 스크롤 표시하는 파이썬 코드를 작성해주세요.
     ```
-    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+
+  - GPT생성 명령(프롬프트) 함수 이해 샘플 예시 
+    - LED 디스플레이에 특정 패턴 표시하는 함수 만들기 명령(프롬프트)
     ```
-    
+    마이크로 비트 v2.21을 사용해 'heart'라는 이름의 함수를 정의하고, 이 함수가 호출될 때 LED 디스플레이에 하트 모양을 표시하는 파이썬 코드를 작성해주세요.
     ```
-    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
+     - 온도를 읽고 조건에 따라 반응하는 함수 만들기 명령(프롬프트)
     ```
-    
-    ```
-    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
-    ```
-    
-    ```
-    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
-    ```
-    
-    ```
-    - LED 디스플레이에 문자열 스크롤 표시 명령(프롬프트)
-    ```
-    
-    ```
-  - GPT생성 명령(프롬프트) 함수 이해 샘플 예시
-    ```
-    
+    마이크로 비트 v2.21에서 'check_temperature'라는 이름의 함수를 정의해주세요. 이 함수는 마이크로 비트의 온도 센서를 읽고, 온도가 25도를 초과할 경우 'Hot'을, 그렇지 않으면 'OK'를 LED 디스플레이에 표시합니다. 
     ```
 
 *샘플코드_01
+ - LED 디스플레이에 특정 패턴 표시하는 함수 만들기 GPT 코드
 ```
+from microbit import *
+
+def heart():
+    display.show(Image.HEART)
+
+# 함수 호출
+heart()
+```
+
+- 온도를 읽고 조건에 따라 반응하는 함수 만들기 GPT 코드
+```
+from microbit import *
+
+def check_temperature():
+    if temperature() > 25:
+        display.scroll('Hot')
+    else:
+        display.scroll('OK')
+
+# 함수 호출
+check_temperature(
 ```
 
