--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -100,9 +100,48 @@ custom_display.show_custom_image()
 sleep(2000)
 ```
 
-### 실습제목입력
+### 라이브 러리 이해 및 실습: random 라이브러리
 * 샘플코드_03
 ```
+from microbit import *
+import random
+
+def display_random_int():
+    num = random.randint(1, 9)
+    display.show(str(num))
+
+def display_random_range():
+    num = random.randrange(0, 10, 2)  # 0에서 9 사이의 짝수
+    display.show(str(num))
+
+def display_random_float():
+    num = random.random()
+    display.scroll(str(round(num, 2)))
+
+def display_random_choice():
+    items = ['A', 'B', 'C', 'D', 'E']
+    choice = random.choice(items)
+    display.show(choice)
+
+def display_random_uniform():
+    num = random.uniform(1, 3)
+    display.scroll(str(round(num, 2)))
+
+random_functions = [
+    display_random_int,
+    display_random_range,
+    display_random_float,
+    display_random_choice,
+    display_random_uniform
+]
+
+current_function_index = 0
+
+while True:
+    if button_a.was_pressed():
+        random_functions[current_function_index]()
+        current_function_index = (current_function_index + 1) % len(random_functions)
+        sleep(1000)
 ```
 
 ## 이해하기 샘플코드
