--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -174,8 +174,53 @@ while True:
     fancy_led.fancy_blink()
 ```
 
-* 샘플코드_02
+* 샘플코드_02-sensor_base.py 파일
+  - 센서 기본 클래스 정의
 ```
+# sensor_base.py
+class SensorBase:
+    def read(self):
+        pass
+
+    def display_value(self, value):
+        print("Sensor value:", value)
+```
+* 샘플코드_02-sensor_readings.py 파일
+  - 특정 센서(온도, 조도, 마이크)를 위한 클래스 정의
+```
+# sensor_readings.py
+from sensor_base import SensorBase
+from microbit import accelerometer, temperature
+
+class AccelerometerSensor(SensorBase):
+    def read(self):
+        x, y, z = accelerometer.get_values()
+        return (x, y, z)
+
+class TemperatureSensor(SensorBase):
+    def read(self):
+        return temperature()
+```
+* 샘플코드_02-main.py 파일
+  - 센서 클래스 사용
+```
+# main.py
+from sensor_readings import AccelerometerSensor, TemperatureSensor
+from microbit import sleep
+
+accelerometer_sensor = AccelerometerSensor()
+temperature_sensor = TemperatureSensor()
+
+while True:
+    # 가속도 센서에서 x, y, z 축 값 읽기
+    accel_values = accelerometer_sensor.read()
+    print("Accelerometer values: x={0}, y={1}, z={2}".format(*accel_values))
+    
+    # 온도 센서 값 읽기
+    temp_value = temperature_sensor.read()
+    print("Temperature:", temp_value, "degrees Celsius")
+    
+    sleep(2000)
 ```
 
 * 샘플코드_03
