--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -224,7 +224,51 @@ while True:
 ```
 
 * 샘플코드_03
+  - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
 ```
+# 코드 수정해야 함.
+from microbit import *
+import music
+import random
+
+# 난수 생성
+target_number = random.randint(1, 100)
+guess = 0
+
+# 게임 상태
+game_over = False
+
+while True:
+    # 게임이 끝난 후, 마이크로 비트를 흔들어 게임 재시작
+    if accelerometer.was_gesture("shake") and game_over:
+        target_number = random.randint(1, 100)
+        guess = 0
+        game_over = False
+        display.clear()
+
+    # 게임 진행 중
+    if not game_over:
+        # 버튼 A를 눌러 숫자 증가
+        if button_a.was_pressed():
+            guess = (guess + 1) % 101  # 1부터 100까지 순환
+            if guess == 0: guess = 1
+            display.scroll(str(guess))
+
+        # 버튼 B를 눌러 추측 제출
+        if button_b.was_pressed():
+            if guess == target_number:
+                # 정답 시 멜로디 재생 및 하트 깜박임
+                for i in range(5):
+                    display.show(Image.HEART)
+                    sleep(200)
+                    display.clear()
+                    sleep(200)
+                music.play(music.PRELUDE)
+                game_over = True
+            else:
+                # 틀린 경우 숫자를 다시 조정
+                display.scroll("?")
+
 ```
 
 ## 적용하기 샘플코드
