Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -1,7 +1,24 @@
 # 다양한 코드 문법 활용 실습 파트 코드
 ## 마빗으로 이것 저것 만들기!
 * 샘플코드_01
+  - 센서로 데이터를 측정 및 정리하는 데이터 로깅
 ```
+from microbit import *
+import log
+
+log.set_labels('temperature', 'sound', 'light')
+
+@run_every(ms=3000) #ms는 미리세컨이며 1000이 1초 입니다. 여기 시간은 변경하여 측정 속도를 조철할 수 있습니다.
+def log_data():
+    log.add({
+      'temperature': temperature(),
+      'sound': microphone.sound_level(),
+      'light': display.read_light_level()
+    })
+
+while True:
+    print('temperature:{}, sound:{}, light:{}'.format(temperature(),microphone.sound_level(),display.read_light_level()  ))
+    sleep(2000)
 ```
 
 * 샘플코드_02
