--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -174,7 +174,8 @@ while True:
     fancy_led.fancy_blink()
 ```
 
-* 샘플코드_02-sensor_base.py 파일
+* 샘플코드_02- sensor_base.py 파일
+  - 센서(온도, 조도, 마이크) 컨트롤 모듈화 코드 
   - 센서 기본 클래스 정의
 ```
 # sensor_base.py
@@ -185,7 +186,8 @@ class SensorBase:
     def display_value(self, value):
         print("Sensor value:", value)
 ```
-* 샘플코드_02-sensor_readings.py 파일
+* 샘플코드_02- sensor_readings.py 파일
+  - 센서(온도, 조도, 마이크) 컨트롤 모듈화 코드
   - 특정 센서(온도, 조도, 마이크)를 위한 클래스 정의
 ```
 # sensor_readings.py
@@ -201,7 +203,8 @@ class TemperatureSensor(SensorBase):
     def read(self):
         return temperature()
 ```
-* 샘플코드_02-main.py 파일
+* 샘플코드_02- main.py 파일
+  - 센서(온도, 조도, 마이크) 컨트롤 모듈화 코드
   - 센서 클래스 사용
 ```
 # main.py
@@ -223,52 +226,61 @@ while True:
     sleep(2000)
 ```
 
-* 샘플코드_03
+* 샘플코드_03- game_rules.py 파일
   - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
 ```
-# 코드 수정해야 함.
-from microbit import *
-import music
+# game_rules.py
 import random
 
-# 난수 생성
-target_number = random.randint(1, 100)
-guess = 0
+def start_game():
+    print('게임 조건: 랜덤으로 생성된 0-100까지의 수를 빠르게 맞히는 코드입니다. 몇 번 입력하여 맞추었는가를 출력합니다. 가장 적은 횟수를 입력한 사람이 승리합니다.')
+    return random.randint(0, 100)  # 0에서 100 사이의 난수 생성
+```
 
-# 게임 상태
-game_over = False
-
-while True:
-    # 게임이 끝난 후, 마이크로 비트를 흔들어 게임 재시작
-    if accelerometer.was_gesture("shake") and game_over:
-        target_number = random.randint(1, 100)
-        guess = 0
-        game_over = False
-        display.clear()
-
-    # 게임 진행 중
-    if not game_over:
-        # 버튼 A를 눌러 숫자 증가
-        if button_a.was_pressed():
-            guess = (guess + 1) % 101  # 1부터 100까지 순환
-            if guess == 0: guess = 1
-            display.scroll(str(guess))
-
-        # 버튼 B를 눌러 추측 제출
-        if button_b.was_pressed():
-            if guess == target_number:
-                # 정답 시 멜로디 재생 및 하트 깜박임
-                for i in range(5):
-                    display.show(Image.HEART)
-                    sleep(200)
-                    display.clear()
-                    sleep(200)
-                music.play(music.PRELUDE)
-                game_over = True
+* 샘플코드_03- number_guessing.py 파
+  - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
+```
+# number_guessing.py
+def guess_number(target):
+    attempts = 0
+    while True:
+        try:
+            guess = int(input("0-100 사이의 숫자를 입력하세요: "))
+            attempts += 1
+            if guess < 0 or guess > 100:
+                print("0에서 100 사이의 숫자를 입력해야 합니다.")
+            elif guess == target:
+                print("축하합니다! 당신이 맞췄습니다.")
+                return attempts
             else:
-                # 틀린 경우 숫자를 다시 조정
-                display.scroll("?")
+                if guess < target:
+                    print("틀렸습니다. 입력한 값보다 큽니다. 다시 입력하세요.")
+                else:
+                    print("틀렸습니다. 입력한 값보다 작습니다. 다시 입력하세요.")
+        except ValueError:
+            print("정수를 입력해야 합니다.")
+```
 
+* 샘플코드_03- main.py 파일
+  - 0-100 까지 랜덤으로 생성된 숫자 빨리 맞추기 게임기
+```
+from microbit import*
+from game_rules import start_game
+from number_guessing import guess_number
+import music
+
+
+def main():
+    target_number = start_game()  # 게임 시작 및 난수 생성
+    attempts = guess_number(target_number)  # 사용자로부터 숫자 입력 받고, 시도 횟수 반환
+    print('총 {}번 시도하여 숫자를 맞히셨습니다.'.format(attempts))
+    display.scroll(attempts)
+    sleep(4000)
+    music.play(music.PYTHON)
+    
+
+if __name__ == '__main__': #main()으로 실행해도 무방
+    main()
 ```
 
 ## 적용하기 샘플코드
