--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -233,7 +233,7 @@ while True:
 import random
 
 def start_game():
-    print('게임 조건: 랜덤으로 생성된 0-100까지의 수를 빠르게 맞히는 코드입니다. 몇 번 입력하여 맞추었는가를 출력합니다. 가장 적은 횟수를 입력한 사람이 승리합니다.')
+    print(' 게임 조건:컴퓨터가 0부터 100까지 마음대로 생각한 숫자를 맞혀 보는 게임이에요.\n 숫자를 맞히기 위해 여러 번 추측할 수 있어요. 몇 번만에 맞혔는지 컴퓨터가 알려줄 거예요.\n 친구들과 게임을 하면서 누가 가장 적은 횟수로 숫자를 맞혔는지 확인해 보세요.\n 숫자를 가장 적게 말하고 맞힌 친구가 이기는 게임이랍니다.')
     return random.randint(0, 100)  # 0에서 100 사이의 난수 생성
 ```
 
