--- a/Microbit/GPT+Microbit/17.클래스와 모듈.md
+++ b/Microbit/GPT+Microbit/17.클래스와 모듈.md
@@ -174,8 +174,8 @@ while True:
     fancy_led.fancy_blink()
 ```
 
-* 샘플코드_02- sensor_base.py 파일
-  - 센서(온도, 조도, 마이크) 컨트롤 모듈화 코드 
+* 샘플코드_02- sensor_reading.py 파일
+  - 센서(마이크, 온도, 조) 컨트롤 모듈화 코드 
   - 센서 기본 클래스 정의
 ```
 # sensor_base.py
@@ -191,38 +191,45 @@ class SensorBase:
   - 특정 센서(온도, 조도, 마이크)를 위한 클래스 정의
 ```
 # sensor_readings.py
-from sensor_base import SensorBase
-from microbit import accelerometer, temperature
 
-class AccelerometerSensor(SensorBase):
+from microbit import *
+
+class MicSensor():
     def read(self):
-        x, y, z = accelerometer.get_values()
-        return (x, y, z)
+       return microphone.sound_level()
 
-class TemperatureSensor(SensorBase):
+class TemperatureSensor():
     def read(self):
         return temperature()
+
+class LightSensor():
+    def read(self):
+        return display.read_light_level()
 ```
 * 샘플코드_02- main.py 파일
   - 센서(온도, 조도, 마이크) 컨트롤 모듈화 코드
-  - 센서 클래스 사용
+  - 센서 리딩 모듈 사용
 ```
 # main.py
-from sensor_readings import AccelerometerSensor, TemperatureSensor
-from microbit import sleep
+from sensor_readings import *
+from microbit import *
 
-accelerometer_sensor = AccelerometerSensor()
-temperature_sensor = TemperatureSensor()
+mic_sensor = MicSensor()
+temp_sensor = TemperatureSensor()
+light_sensor = LightSensor()
 
 while True:
-    # 가속도 센서에서 x, y, z 축 값 읽기
-    accel_values = accelerometer_sensor.read()
-    print("Accelerometer values: x={0}, y={1}, z={2}".format(*accel_values))
+    # 마이크 센서값 값 읽기
+    mic_values = mic_sensor.read()
+    print('Mic_sound_lv: {}'.format(mic_values))
     
     # 온도 센서 값 읽기
-    temp_value = temperature_sensor.read()
-    print("Temperature:", temp_value, "degrees Celsius")
-    
+    temp_value = temp_sensor.read()
+    print('Temperature:', temp_value, 'degrees Celsius')
+
+    # 조도 센서 값 읽기
+    light_value = light_sensor.read()
+    print('Light_lv: {}'.format(light_value))
     sleep(2000)
 ```
 
