Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -1,7 +1,7 @@
 # 다양한 코드 문법 활용 실습 파트 코드
 ## 마빗으로 이것 저것 만들기!
 * 샘플코드_01
-  - 센서로 데이터를 측정 및 정리하는 데이터 로깅
+  - 예제1: 마이크로 비트 데이터 로깅 및 분석 실습
 ```
 from microbit import *
 import log
@@ -21,8 +21,69 @@ while True:
     sleep(2000)
 ```
 
-* 샘플코드_02
+* 예제2: 푸쉬업 비트 메이킹
+  - 푸쉬업 비트 기본 코드
 ```
+from microbit import *
+steps=0
+
+while True:
+
+    if accelerometer.was_gesture('face down'):
+        steps=steps+1
+        display.show(steps)
+
+    elif button_a.get_presses():
+        display.scroll(steps)
+    elif button_b.get_presses():   
+        reset()
+```
+ - 푸쉬업 비트 심화 코드
+```
+from microbit import*
+import music
+x=0
+y=0
+
+while True:
+    if x<5 and accelerometer.was_gesture('face down'):
+        display.set_pixel(x,y,9)
+        x=x+1
+    elif x==5 and y==0 and accelerometer.was_gesture('face down'):
+        x,y=0,1
+        display.set_pixel(x,y,9)
+        x=x+1
+    elif x==5 and y==1 and accelerometer.was_gesture('face down'):
+        x,y=0,2
+        display.set_pixel(x,y,9)
+        x=x+1
+
+    elif x==5 and y==2 and accelerometer.was_gesture('face down'):
+        x,y=0,3
+        display.set_pixel(x,y,9)
+        x=x+1
+
+    elif x==5 and y==3 and accelerometer.was_gesture('face down'):
+        x,y=0,4
+        display.set_pixel(x,y,9)
+        x=x+1
+
+    elif x==5 and y==4:
+        music.play(music.ENTERTAINER)
+        display.show(Image.HAPPY)
+        sleep(500)
+        display.show(Image.HEART)
+        sleep(500)
+        display.show(Image.GHOST)
+        sleep(500)
+        display.scroll("Good")
+        reset()
+
+    elif button_a.is_pressed():
+        reset()
+
+    elif button_b.get_presses():   
+        reset()
 ```
 
 * 샘플코드_03
