Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -86,8 +86,64 @@ while True:
         reset()
 ```
 
-* 샘플코드_03
+* 로또 번호 장치 메이킹
 ```
+from microbit import *
+import random
+import music
+import speech
+speech.say('Would you like some number?')
+
+
+
+num_list=[]
+while True:
+    if button_a.was_pressed():
+        if len(num_list)==0:
+          audio.play(Sound.TWINKLE)
+          for x in range(5):
+             for y in range(5):
+                 display.set_pixel(x,y,9)
+                 sleep(50)
+
+          for x in range(6):
+              num=random.randint(1,45)
+              while num in num_list:
+                  num=random.randint(1,45)
+              num_list.append(num)
+
+        elif len(num_list)>=6:
+          num_list.clear()
+          display.show(Image.HEART)
+          sleep(400)
+          audio.play(Sound.YAWN)
+          display.clear()
+
+    elif button_b.was_pressed():
+        if len(num_list)==0:
+            continue
+
+        elif len(num_list)>0:
+          audio.play(Sound.HAPPY)
+          for x in range(6):
+             display.scroll(num_list[x])
+             music.play(music.POWER_UP)
+             for y in range(5):
+                 for x in range(5):
+                    display.set_pixel(x,y,9)
+                    sleep(50)             
+
+        display.show(Image.DIAMOND)
+        sleep(400)
+        print("$$$!Congratulation!$$$")
+        print(num_list)
+
+    elif accelerometer.was_gesture('shake'):
+        num_list.clear()
+        display.show(Image.HEART)
+        sleep(400)
+        audio.play(Sound.YAWN)
+        display.clear()
 ```
 
 * 샘플코드_04
@@ -98,7 +154,7 @@ while True:
 ```
 ```
 
-* 샘플코드_06: 스탑워치 코드
+* 스탑워치 코드
 ```
 from microbit import *
 import time
