Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -86,7 +86,7 @@ while True:
         reset()
 ```
 
-* 로또 번호 장치 메이킹
+* 예제3: 로또 번호 장치 메이킹
 ```
 from microbit import *
 import random
@@ -146,15 +146,11 @@ while True:
         display.clear()
 ```
 
-* 샘플코드_04
+* 예제 4: 라디오 통신 팀 컨트롤 장치 만들기
 ```
 ```
 
-* 샘플코드_05
-```
-```
-
-* 스탑워치 코드
+* 예제5: 스탑워치 코드
 ```
 from microbit import *
 import time
@@ -185,7 +181,7 @@ while True:
 ```
 
 
-* 샘플코드_07: z축 가속도를 읽어오는 코드
+* 예제6: z축 가속도를 읽어오는 코드
 ```
 from microbit import *
 
@@ -214,7 +210,7 @@ z축 = -1023 (국제단위계 m/2^2)으로 환산
 """
 ```
 
-* 샘플코드_08: 좌우 기울기를 이용, 내려오는 벽 피하기 게임(참고: https://microbit-micropython.readthedocs.io/)
+* 예제7: 좌우 기울기를 이용, 내려오는 벽 피하기 게임(참고: https://microbit-micropython.readthedocs.io/)
 ```
 # Simple Slalom by Larry Hastings, September 2015
 #
@@ -339,7 +335,7 @@ while True:
         m.sleep(100)
 ```
 
-* 샘플코드_09: 1-10까지 수를 세고 10이 되면 도~2옥타브 도까지 노래를 부르는 코드 
+* 예제 8: 1-10까지 수를 세고 10이 되면 도~2옥타브 도까지 노래를 부르는 코드 
 ```
 from microbit import *
 import speech
@@ -361,7 +357,7 @@ for i in range(1,11):
     if i == 10:
        speech.sing(song, speed=100)               
 ```
-* 샘플코드_10: LED 픽샐이 랜덤으로 별처럼 반짝이는 코드
+* 예제9: LED 픽샐이 랜덤으로 별처럼 반짝이는 코드
 ```
    from microbit import *
     import random
@@ -392,7 +388,7 @@ for i in range(1,11):
         
         sleep(100)  # 다음 애니메이션을 시작하기 전에 잠시 대기합니다.
 ```
-* 샘플코드_11: 마이크로 비트 초음파 모기 퇴치기
+* 예제10: 마이크로 비트 초음파 모기 퇴치기
 ```
 #12000Hz~17000Hz는 일반적으로 모기 및 벌레가 싫어하는 주파수 대역이다. music.pitch()함수로 주파수 대역을 설정하여 벌레 퇴치기를 만들어 본다.
 from microbit import *
