Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -1,7 +1,6 @@
 # 다양한 코드 문법 활용 실습 파트 코드
 ## 마빗으로 이것 저것 만들기!
-* 샘플코드_01
-  - 예제1: 마이크로 비트 데이터 로깅 및 분석 실습
+* 예제1: 마이크로 비트 데이터 로깅 및 분석 실습
 ```
 from microbit import *
 import log
