Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -148,9 +148,31 @@ while True:
 * 예제 4: 라디오 통신 팀 컨트롤 장치 만들기
  - 송신(Send)코드
 ```
+from microbit import *
+import radio
+
+group_num=0
+radio.config(group=group_num, power=7) #gruop_num으로 변수 번호를 전송합니다.
+radio.on()
+while True:
+    group_num=int(input("전송하려는 그룹 1-6을 선택하세요:"))
+    messege=input("전달하려는 메세지를 영어로 입력하세요:")
+    if group_num=1:
+        radio.send("messege")
+    elif group_num=2:
+        radio.send("messege")
+    elif group_num=3:
+        radio.send("messege")
+    elif group_num=4:
+        radio.send("messege")
+    elif group_num=5:
+        radio.send("messege")
+    else group_num=6:
+        radio.send("messege")
 ``` 
  - 수신(Receive)코드
 ```
+
 ```
 
 * 예제5: 스탑워치 코드
