Update 18.다양한 코드 문법 활용실습.md

--- a/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
+++ b/Microbit/GPT+Microbit/18.다양한 코드 문법 활용실습.md
@@ -172,7 +172,16 @@ while True:
 ``` 
  - 수신(Receive)코드
 ```
+from microbit import *
+import radio
 
+radio.config(group=1, power=7) #수신자마다 그룹 번호를 1-6으로 지정
+radio.on()
+while True:
+    messege = radio.receive()
+    display.scroll(messege)
+    sleep(3000)
+    display.clear()
 ```
 
 * 예제5: 스탑워치 코드
