--- a/Microbit/GPT+Microbit/05.문자열(출력,연산).md
+++ b/Microbit/GPT+Microbit/05.문자열(출력,연산).md
@@ -50,6 +50,7 @@ display.scroll(message)
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - input()함수 활용 문자열 연산
 ```
 from microbit import *
 
@@ -67,6 +68,7 @@ display.scroll(secret_message)
 ```
 
 * 샘플코드_02
+  - 문자열 합, 곱 이해하기
 ```
 from microbit import *
 
@@ -79,13 +81,14 @@ whole = part1 + part2
 repeated_part = part1 * part3
 
 # 반복된 문자열과 연결된 문자열을 결합
-combined_message = repeated_part + " " + whole
+combined_message = repeated_part + ' ' + whole
 
 # 결합된 메시지 표시
 display.scroll(combined_message)
 ```
 
 * 샘플코드_03
+  - 문자열 활용 온도, 사운드 레벨 측정값 결과 출력
 ```
 from microbit import *
 
@@ -103,7 +106,7 @@ display.scroll(message)
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* a, b버튼을 10초동안 번갈아 누르고 카운팅하여 문자열 연산으로 출력   
    - GPT 프롬프트 템플릿
     ```
     프롬프트 템프릿
