--- a/Microbit/GPT+Microbit/01.변수의 이해.md
+++ b/Microbit/GPT+Microbit/01.변수의 이해.md
@@ -34,11 +34,12 @@ while True:
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 변수 활용 정수, 실수, 문자 출력
 ```
 from microbit import *
 
 num_01= 1
-num_02= 2
+num_02= 2.0
 text= 'Hello'
 
 display.show(num_01)
@@ -50,6 +51,7 @@ sleep(1000)
 ```
 
 * 샘플코드_02
+  - 변수 활용 LED 이미지 직접 만들기 출력
 ```
 from microbit import *
 
@@ -63,6 +65,7 @@ display.show(Led_square)
 ```
 
 * 샘플코드_03
+  - 변수 활용 온도값 측정
 ```
 from microbit import *
 
@@ -75,7 +78,7 @@ while True:
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* GPT 프롬프트 엔지니어링 활용 변수명 및 인자값 바꾸기
    - GPT 프롬프트 템플릿
     ```
     다음과 같은 템플릿의 형태로 제시할 예정인데 수정이 가능한가요?
@@ -89,10 +92,10 @@ while True:
     1.파이썬 코드= 
     from microbit import * 
       
-    text = "Hello" 
+    text = 'Hello' 
     display.scroll(text) 
 
-    2.수정요구사항=변수의 이름을 A로 수정, A변수의 인자값을 "Hello world"로 수정 
+    2.수정요구사항=변수의 이름을 A로 수정, A변수의 인자값을 'Hello world'로 수정 
 
     3. 추가요구사항=3초 뒤에 LED가 꺼지도록 코드 제시
     ```
