--- a/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
+++ b/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
@@ -83,16 +83,18 @@ while True:
    - GPT 프롬프트 템플릿
     ```
     다음과 같은 템플릿의 형태로 제시할 예정인데 수정이 가능한가요?
-    1.파이썬 코드=
-    2.수정요구사항=
-    3.첫번째 input()함수 변수명=4.두번째 input()함수 변수명=5.작동기능정리:
+    1.파이썬 코드:
+    2.수정요구사항:
+    3.첫번째 input()함수 변수명:
+    4.두번째 input()함수 변수명:
+    5.작동기능정리:
     ```
 
   - GPT 프롬프트 템플릿 입력 내용
     ```
     1.파이썬 코드:
     from microbit import *
-    word_input=input("word:")
+    word_input=input('word:')
     
     while True:
         display.scroll(word_input)
@@ -106,8 +108,8 @@ while True:
     ```
     from microbit import *
     
-    word_A = input("Enter word A: ")
-    word_B = input("Enter word B: ")
+    word_A = input('Enter word A: ')
+    word_B = input('Enter word B: ')
     
     while True:
         display.show(word_A)
