Update 02.입력과 출력, 함수의 이해.md

--- a/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
+++ b/Microbit/GPT+Microbit/02.입력과 출력, 함수의 이해.md
@@ -36,6 +36,7 @@ while True:
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - input()함수 활용 전광판 만들기(display.scroll()과 display.show() 이해)
 ```
 from microbit import *
 
@@ -48,6 +49,7 @@ while True:
 ```
 
 * 샘플코드_02
+  - 가속도값 시리얼 창 추가 출력
 ```
 from microbit import *
 while True:
@@ -62,6 +64,7 @@ while True:
 ```
 
 * 샘플코드_03
+  - 마이크 센서 사운드 레벨 측청: display.set_pixel()함수 활용 
 ```
 from microbit import *
 while True:
@@ -79,7 +82,7 @@ while True:
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 문자 전광판 코드 GPT로 기능 수정해보기
    - GPT 프롬프트 템플릿
     ```
     다음과 같은 템플릿의 형태로 제시할 예정인데 수정이 가능한가요?
