--- a/Microbit/GPT+Microbit/03.자료형.md
+++ b/Microbit/GPT+Microbit/03.자료형.md
@@ -54,6 +54,7 @@ while True:
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 변수의 입력 방법을 변경해보기
 ```
 var_01, var_02, var_03, var_04='1', 1, 3.14, True
 print(type(var_01), type(var_02), type(var_03), type(var_04))
@@ -62,18 +63,23 @@ print(type(var_01), type(var_02), type(var_03), type(var_04))
 ```
 
 * 샘플코드_02
+  - music 모듈에서 music.play()의 인자값 타입 확인
 ```
 from microbit import *
 import music
 
 var_01, var_02, var_03, var_04='1', 1, 3.14, True
 var_01_str, var_02_str=type(var_01), type(var_02)
+
 display.scroll(str(var_01_str))
 display.show(str(var_02_str))
+
 music.play(music.BA_DING)
+print(type(music.BA_DING))
 ```
 
 * 샘플코드_03
+  - 자료형 판별기에 a, b버튼 및 사운드 기능 추가하기
 ```
 from microbit import *
 import music
@@ -93,7 +99,7 @@ while True:
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 입력된 데이터 유형에 따라 다른 소리를 출력하는 장치 만들기
    - GPT 프롬프트 템플릿
     ```
     템플릿을 제공하겠습니다.
