--- a/Microbit/GPT+Microbit/04.연산자.md
+++ b/Microbit/GPT+Microbit/04.연산자.md
@@ -78,6 +78,7 @@ print(str(less_or_equal_result))
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 연산 결과 마이크로 비트 출력
 ```
 from microbit import *
 
@@ -115,6 +116,7 @@ print(is_odd)
 ```
 
 * 샘플코드_03
+  - 3개의 숫자 입력 받아 비교결과 출력
 ```
 from microbit import *
 # 세 개의 숫자를 입력받습니다.
@@ -144,7 +146,7 @@ print(str(less_or_equal_result))
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 가속도 센서 활용 마이크로 비트를 자유낙하 시켰을 때 떨어진 거리구하기
    - GPT 프롬프트 템플릿
     ```
     수정하여 템플릿을 제공하겠습니다.
