Update 07.문자열(포멧팅, 문자열 함수).md

--- a/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
+++ b/Microbit/GPT+Microbit/07.문자열(포멧팅, 문자열 함수).md
@@ -76,6 +76,7 @@ print('문자열 길이:', length) #7번째 줄 출력
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 마이크로 비트의 Speech.say()함수 활용하여 포맷팅한 문자 음성으로 출력하기
 ```
 from microbit import *
 import speech
@@ -96,6 +97,7 @@ while True:
 ```
 
 * 샘플코드_02
+  - 문자열 포맷팅 music 라이브러리 컨트롤 값 확인
 ```
 from microbit import *
 import music
@@ -117,19 +119,14 @@ while True:
 ```
 
 * 샘플코드_03
+  - 문자열 함수 활용 영어 대문자 변환장치 만들기
 ```
 from microbit import *
-
-# 사용자로부터 문자열 입력 받기
 user_input = input("영어 문자열을 입력하세요: ")
 
-# 입력한 문자열을 모두 대문자로 변환
 uppercase_input = user_input.upper()
-
-# 문자열의 길이 계산
 length = len(uppercase_input)
 
-# 결과를 LED 디스플레이에 출력
 print('입력한 문자열을 대문자로 변환: {0}'.format(uppercase_input))
 print('문자열 길이(공백 포함): {0}'.format(length))
 display.scroll("{}".format(uppercase_input))
@@ -137,7 +134,7 @@ display.scroll("{}".format(uppercase_input))
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 마이크로 비트 스탑워치 만들기
   - 챕터 6에서 사용한 GPT프롬프트 템플릿
     ```
     1.코드 언어:
