--- a/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
+++ b/Microbit/GPT+Microbit/06.문자열(인덱싱, 슬라이싱)파트.md
@@ -78,7 +78,9 @@ print(slicing_02)
 ```
 
 ## 이해하기 샘플코드
-*샘플코드_01
+* 샘플코드_01
+  - 문자열 인덱싱 응용
+
 ```
 #문자열 인덱싱
 from microbit import *
@@ -92,6 +94,7 @@ display.scroll((text[4]+text[1])*2)
 ```
 
 * 샘플코드_02
+  - 문자열 슬라이싱 응용
 ```
 #문자열 슬라이싱(기본)
 from microbit import *
@@ -110,6 +113,7 @@ sleep(1000)
 
   
 * 샘플코드_03
+  - 문자열 인덱싱에서 음수사용 암호코드 만들기
 ```
 #문자열 인덱싱에서 음수사용 암호코드
 from microbit import *
@@ -127,7 +131,7 @@ display.scroll(ciphertext)
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 인덱싱 값 맞추기 퀴즈 장치 만들기
   - GPT프롬프트 템플릿
     ```
     1.코드 언어:
