--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -74,8 +74,8 @@ while True:
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - if, elif, else활용 마이크로 비트 점수 판별기 만들기
 ```
-#if, elif, else를 활용하여 점수 판별기 코드 만들기
 from microbit import *
 import music
 
@@ -101,6 +101,7 @@ else:
 ```
 
 * 샘플코드_02
+  - 소리 센서와 LED를 이용한 소음 측정기 만들기
 ```
 from microbit import *
 
@@ -121,6 +122,7 @@ while True:
 ```
 
 * 샘플코드_03
+  - 낮밤 알리미: 조도 센서를 이용한 조건에 따라 이모티출력
 ```
 from microbit import *
 
@@ -225,7 +227,6 @@ while True:
  
   - GPT 프롬프트 템플릿 입력 내용
      ```
-
     다음과 같은 템플릿의 형태로 제시할 예정인데 수정이 가능한가요?
     1.파이썬 코드= 
      1) 1번 코드
@@ -267,8 +268,8 @@ while True:
             print('현재는 낮 입니다.')
             display.scroll('Daytime')
             sleep(1000)
-    2.수정요구사항=  마이크로 비트 시리얼 창에 숫자 1,2,3을 입력하면  조도, 온도, 사운드를 각각 측정하는 상태로 변화되는 기기기
-    3.추가요구사항= if 문만 사용
+    2.수정요구사항:  마이크로 비트 시리얼 창에 숫자 1,2,3을 입력하면  조도, 온도, 소리입력을 각각 측정하는 상태로 변화되는 기기기
+    3.추가요구사항: if 문만 사용
     ```
 
    - GPT생성 코드
