--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -1,6 +1,6 @@
 # if문 심화 파트 코드
 ## 배우기 샘플코드
-### 실습제목입력
+### 중첩 if문 기초
 * 샘플코드_01
 ```
 from microbit import *
@@ -44,7 +44,7 @@ if subject == '3':
         print('불합격입니다.')
         music.play(music.POWER_DOWN)
 ```
-### 실습제목입력
+### 토글 스위치 만들기 및 응용
 * 샘플코드_02
 ```
 from microbit import *
@@ -76,6 +76,7 @@ while True:
 
 ## 이해하기 샘플코드
 * 샘플코드_01
+  - 중접 if문 활용 전광판, 사칙연산 계산기 혼합장치 만들기
 ```
 from microbit import *
 import power
@@ -119,6 +120,7 @@ while True:
 ```
 
 * 샘플코드_02
+  - 토클 스위치 활용 자기장 강도 측정기 및 나침반 만들기 혼합 장치 만들기
 ```
 from microbit import *
 
