--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -138,8 +138,8 @@ for i in range(1,21):
        speech.say('Time is over',  speed=150, pitch=130, throat=100, mouth=190)
 ```
 * 샘플코드_01-4
+  - 입력한 수까지 짝수의 합 구하는 코드를 설계하면?
 ```
-#입력한 수까지 짝수의 합 구하는 코드를 설계하면?
 from microbit import *
 sum=0
 num = int(input('짝수의 합을 구할 끝값을 입력:'))
@@ -151,8 +151,8 @@ for i in range(0,num+1,2):
 ```
 
 * 샘플코드_01-5
+  - 끝값 지정 카운트 및 건너뛰는 값 음수 지정
 ```
-#끝값 지정 카운트 및 건너뛰는 값 음수 지정
 from microbit import *
 
 for i in range(100,0,-2):
@@ -161,8 +161,8 @@ for i in range(100,0,-2):
 ```
 
 * 샘플코드_01-6
+  - 문자열 활용 for문 다루기
 ```
-#문자열 활용 for문 다루기
 from microbit import *
 
 for letter in 'micro:bit':
@@ -170,8 +170,8 @@ for letter in 'micro:bit':
     display.scroll(letter, delay=40)
 ```
 * 샘플코드_02
+  - 소리를 감지하면 LED 애니메이션이 한줄씩 나타나는 장치
 ```
-#소리를 감지하면 LED 애니메이션이 한줄씩 나타나는 장치
 from microbit import *
 
 while True:
@@ -186,6 +186,7 @@ while True:
 ```
 
 * 샘플코드_03-1
+  - for문 활용 LED 애니메이션 표현 01
 ```
 #어떻게 작동되는지 상상해보자
 from microbit import*
@@ -202,8 +203,8 @@ while True:
 ```
 
 * 샘플코드_03-2
+  - for문 활용 LED 애니메이션 표현 02
 ```
-#어떻게 작동되는지 상상해보자
 from microbit import*
 
 while True:
