--- a/Microbit/GPT+Microbit/10.for문 기초.md
+++ b/Microbit/GPT+Microbit/10.for문 기초.md
@@ -224,7 +224,7 @@ while True:
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 중첩 for문 활용 밝기를 조절 마이크로 비트 LED 애니메이션 표현
   - GPT리버스 프롬프트 엔지니어링 대화
     ```
     1)안녕하세요 마이크로비트를 알고 있나요?
