--- a/Microbit/GPT+Microbit/09.if문 심화.md
+++ b/Microbit/GPT+Microbit/09.if문 심화.md
@@ -152,7 +152,7 @@ while True:
 
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 리버스 프롬프트 엔지니어링 활용 코드 설계 및 수정 
   - GPT 리버스 프롬프트 엔지니어링을 위한 질문 단계
     ```
     리버스 프롬프트 엔지니어링을 활용
