--- a/Microbit/GPT+Microbit/08.if문 기초.md
+++ b/Microbit/GPT+Microbit/08.if문 기초.md
@@ -216,7 +216,7 @@ while True:
     6.출력 문제 스타일: 문제 스타일은 SCI 급 논문 작성 문체로 출력을 원하며, 접속사를 사용하여 2가지 문장 정도의 길이를 최대로 출력을 원합니다. 
 
     ```  
-* 샘플코드_01
+* GPT 커스텀 인스트럭션 활용 방법 및 조도, 온도, 소리입력을 측정하는 코드설계
   - GPT프롬프트 템플릿
     ```
     #커스텀 인스트럭션을 입력한 후, 챕터 1에서 사용했던 프롬프트를 다시 사용해 본다. 
