--- a/Microbit/GPT+Microbit/11.for문 심화.md
+++ b/Microbit/GPT+Microbit/11.for문 심화.md
@@ -87,7 +87,7 @@ while True:
 
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+*  y=x 그래프와 y=-x 그래프를 버튼 A와 버튼 B로 선택 출력하는 장치
   - GPT프롬프트 템플릿
     ```
     #이전 대화 창(10장에서 사용했던 GPT 대화창)에서 '기능'만 쿼리로 입력하여 1줄 제공해보기
