--- a/Microbit/GPT+Microbit/12.while문 기초.md
+++ b/Microbit/GPT+Microbit/12.while문 기초.md
@@ -98,8 +98,8 @@
 ## 이해하기 샘플코드
 * 샘플코드_01
 * [런모어 질문] 조크 바이러스(Joke virus)란 무엇인가요?
+  - While 활용 ‘조크 바이러스(Joke Virus)’로 정보통신 윤리 이해하기
 ```
-#간단한 조크 바이러스 만들어 보기
 from microbit import *
 
 # 사용자에게 긴박한 메시지 전달
@@ -123,6 +123,7 @@ while True:
 ```
 
 * 샘플코드_02
+  - 버튼을 누르는 동안만 원하는 그림 반복적으로 출력하기
 ```
 #버튼 및 가속도 센서가 일정하게 작동되는 동안만 원하는 LED 이미지 반복 출력하기
 from microbit import *
@@ -147,6 +148,7 @@ while True:
 ```
 
 * 샘플코드_03
+  - 두 개의 버튼을 이용하여 1~10사이 숫자를 증감시키고 그것을 마이크로 비트에 출력, 특정 숫자 일 땐 출력하지 않게 하기 (continue),10이 넘으면 초기값 1 (break) 코드
 ```
 from microbit import *
 import music
@@ -176,7 +178,7 @@ while True:
 ```
 
 ## 적용하기 샘플코드
-* 샘플코드_01
+* 2개의 코드 조합하여 새로운 코드 창작하기
   - GPT프롬프트 템플릿
     ```
     1)안녕하세요. 마이크로 비트와 파이썬(python) 언어를 알고 있나요?
