--- a/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
+++ b/Microbit/GPT+Microbit/15.복합자료형(dictionary&tuple).md
@@ -201,7 +201,7 @@ print(list)
 * 샘플코드_01
   - GPT 프롬프트 템플릿을 사용하지 않고 대화를 활용하여 코드를 설계하는 방법
     ```
-    1번 명령) 사용할 샘플 코드를 GPT 대화 창에 복사한다.(복사를 하면 GPT가 주석을 달거나, 알고리즙을 설명해준다. 설명 된 상타에서 부족한 부분이 있으면 다음 명령 대화에서 제시해준다.) 
+    1번 명령) 사용할 샘플 코드를 GPT 대화 창에 복사한다.(복사를 하면 GPT가 주석을 달거나, 알고리즘을 설명해준다. 설명 된 상타에서 부족한 부분이 있으면 다음 명령 대화에서 제시해준다.) 
     2번 명령) 위 코드는 OOO언어로 설계된 알고리즘 입니다. OOO을 제어하기 위한 코드입니다.   
     3번 명령) 위 코드를 참조하여 새로운 코드를 설계하려는데, 코드 개발자 역할을 해줄 수 있나요? (3번까지 명령 했을 때 추론하여 코드를 설계해주는 경우도 있다. 그런 경우는 4번 명령을 하지 않아도 된다.)
     4번 명령) OOO의 기능을 하는 코드를 설계해주세요.(여기서 OOO의 기능을 프롬프트 템플릿을 제시하여 제공할 수 있지만, 이번 챕터에서는 대화로 원하는 코드를 받아 보는 것을 목적으로 한다. 코드 출력 후 IDE프로그램을 활용하여 테스트를 해 본다. 이후 잘못된 줄(라인)의 수정을 요청하며 원하는 코드로 수렴해 가는 작업을 거친다.)
