--- a/Microbit/GPT+Microbit/16.함수의 적용.md
+++ b/Microbit/GPT+Microbit/16.함수의 적용.md
@@ -364,7 +364,7 @@ while True:
     마이크로 비트 v2.21에서 'check_temperature'라는 이름의 함수를 정의해주세요. 이 함수는 마이크로 비트의 온도 센서를 읽고, 온도가 25도를 초과할 경우 'Hot'을, 그렇지 않으면 'OK'를 LED 디스플레이에 표시합니다. 
     ```
 
-*샘플코드_01
+* GPT에게 출력받은 명령을 활용한 코드 출력
  - LED 디스플레이에 특정 패턴 표시하는 함수 만들기 GPT 코드
 ```
 from microbit import *
@@ -376,7 +376,7 @@ def heart():
 heart()
 ```
 
-- 온도를 읽고 조건에 따라 반응하는 함수 만들기 GPT 코드
+ - 온도를 읽고 조건에 따라 반응하는 함수 만들기 GPT 코드
 ```
 from microbit import *
 
